--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-date-range": "^1.4.0",
@@ -23,6 +24,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-simple-widgets": "^6.7.0",
     "recharts": "^2.7.2",
     "web-vitals": "^2.1.4"
   },
