--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@mui/x-data-grid": "^6.9.1",
+    "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
