--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "tailwindcss": "^3.3.3"
   }
 }
