--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/joy": "^5.0.0-alpha.89",
     "@mui/material": "^5.13.6",
     "@mui/x-data-grid": "^6.9.1",
     "@react-oauth/google": "^0.11.0",
@@ -18,14 +19,18 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-simple-widgets": "^6.7.0",
     "recharts": "^2.7.2",
     "web-vitals": "^2.1.4"
