--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-date-range": "^1.4.0",
