--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.8.3",
     "axios": "^1.4.0",
+    "cuid": "^3.0.0",
     "dotenv": "^16.3.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
@@ -33,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "react-simple-widgets": "^6.7.0",
+    "react-time-picker": "^6.5.0",
     "recharts": "^2.7.2",
     "socket.io-client": "^4.7.1",
     "web-vitals": "^2.1.4"
