--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.3",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "cuid": "^3.0.0",
     "dotenv": "^16.3.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.16.0",
