--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_GOOGLE_CLIENT_ID='521737203578-ntih0fcki9du8mblht156sf0jcr63bkt.apps.googleusercontent.com'
+# REACT_APP_GOOGLE_MAP_KEY='AIzaSyDTzAU36ESBLNbh0AqMLQ7DKCq9WLPhrx8'
+REACT_APP_GOOGLE_MAP_KEY='AIzaSyBzrgYj8-pc_HF8PmHiRpVU_XG5aR22d3U'
