--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@iconify/icons-mdi": "^1.2.47",
+    "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.89",
     "@mui/material": "^5.13.6",
@@ -23,6 +25,7 @@
     "chart.js": "^4.4.0",
     "cuid": "^3.0.0",
     "dotenv": "^16.3.1",
+    "google-map-react": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
