Fix layout , loading 80%....

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_GOOGLE_CLIENT_ID='521737203578-ntih0fcki9du8mblht156sf0jcr63bkt.apps.googleusercontent.com'
-# REACT_APP_GOOGLE_MAP_KEY='AIzaSyDTzAU36ESBLNbh0AqMLQ7DKCq9WLPhrx8'
-REACT_APP_GOOGLE_MAP_KEY='AIzaSyAIj8cpnZlMLOvGU8_k68rF4FK9yfWhc5o'
+REACT_APP_GOOGLE_CLIENT_ID=''
+REACT_APP_GOOGLE_MAP_KEY=''
+REACT_APP_BASE_URL='http://192.168.1.18:3500/'
