--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-select": "^5.7.4",
     "react-simple-widgets": "^6.7.0",
     "react-time-picker": "^6.5.0",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.7.2",
     "socket.io-client": "^4.7.1",
     "web-vitals": "^2.1.4",
